--- a/Windows XP Metallic/cinnamon/cinnamon.css
+++ b/Windows XP Metallic/cinnamon/cinnamon.css
@@ -112,71 +112,66 @@ StScrollBar StButton#vhandle:hover {
   -arrow-base: 40px; }
 
 /* Cinnamon 3.2 fix */
-.popup-menu,
-.menu {
+/*.popup-menu {
+
   border: solid 1px #aca899;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 1);
+
   color: #000;
   font-size: 9pt;
-  box-shadow: 8px 8px 2px -5px rgba(50, 50, 45, 0.5); }
+  box-shadow: 8px 8px 2px -5px rgba(50,50,45,0.50);
+}*/
+.menu {
+  margin: 5px; }
 
 .popup-submenu-menu-item:open {
-  background-color: #4c4c4c; }
+  background-color: #2c55b1; }
 
 .popup-sub-menu {
-  background-color: transparent; }
-
-.popup-sub-menu .popup-menu-item:ltr {
-  padding-right: 0em; }
-
-.popup-sub-menu .popup-menu-item:rtl {
-  padding-left: 0em; }
-
-.popup-sub-menu StScrollBar {
-  padding: 4px; }
-
-.popup-sub-menu StScrollBar StBin#trough {
-  border-width: 0px; }
-
-.popup-sub-menu StScrollBar StBin#vhandle {
-  background-color: #4c4c4c;
-  border-width: 0px; }
-
-.popup-combo-menu {
-  background-color: rgba(0, 0, 0, 0.9);
-  padding: 1em 0em;
-  color: #000;
-  font-size: 10.5pt;
-  border: 1px solid #1466c9;
-  border-radius: 0px 0px 8px 0px; }
+  background-color: #397dd0; }
+  .popup-sub-menu .popup-menu-item:ltr {
+    padding-right: 0em; }
+  .popup-sub-menu .popup-menu-item:rtl {
+    padding-left: 0em; }
+  .popup-sub-menu StScrollBar {
+    padding: 4px; }
+  .popup-sub-menu StScrollBar StBin#trough {
+    border-width: 0px; }
+  .popup-sub-menu StScrollBar StBin#vhandle {
+    background-color: #4c4c4c;
+    border-width: 0px; }
 
 /* The remaining popup-menu sizing is all done in ems, so that if you
 * override .popup-menu.font-size, everything else will scale with it.
 */
 .popup-menu-content {
-  padding: 1em 0; }
+  padding: 1em 0;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #000;
+  border-radius: 6px;
+  background-gradient-direction: vertical;
+  background-gradient-start: #9897af;
+  background-gradient-end: #eceaec; }
 
 .popup-menu-item {
   padding: .4em 1.75em;
-  spacing: 1em;
-  border: 2px solid transparent; }
-
-.popup-menu-item:active {
-  background-color: #1466c9;
-  color: white; }
-
-.popup-menu-item:insensitive {
-  color: #9f9f9f; }
+  color: #000; }
+  .popup-menu-item:active {
+    background-color: #1466c9;
+    color: white; }
+  .popup-menu-item:hover {
+    background-gradient-direction: vertical;
+    background-gradient-start: #397dd0;
+    background-gradient-end: #2c55b1; }
+  .popup-menu-item:insensitive {
+    color: #9f9f9f; }
 
 .popup-combobox-item {
   spacing: 1em; }
 
 .popup-separator-menu-item {
-  -gradient-height: 1px;
-  -gradient-start: rgba(0, 0, 0, 0);
-  -gradient-end: rgba(255, 255, 255, 0.2);
-  background-color: rgba(0, 0, 0, 0.15);
-  box-shadow: 0 1px white;
+  background-color: white;
   height: 1px; }
 
 .popup-alternating-menu-item:alternate {
@@ -188,7 +183,7 @@ StScrollBar StButton#vhandle:hover {
   -slider-height: 0.3em;
   -slider-background-color: #666666;
   -slider-border-color: #555555;
-  -slider-active-background-color: #1466c9;
+  -slider-active-background-color: #68A941;
   -slider-active-border-color: #DDDDDD;
   -slider-border-width: 1px;
   -slider-handle-radius: 0.5em; }
@@ -197,8 +192,8 @@ StScrollBar StButton#vhandle:hover {
   spacing: .5em; }
 
 .popup-inactive-menu-item {
-  font-weight: normal;
-  color: #999; }
+  font-weight: bold;
+  color: #FFF; }
 
 .popup-subtitle-menu-item {
   font-weight: bold; }
@@ -372,8 +367,23 @@ StScrollBar StButton#vhandle:hover {
   icon-shadow: black 0px 2px 2px; }
 
 /* ===================================================================
- * Panel Launchers Applet (panelLaunchers.js)
+ * Panel Launchers applet (panel-launchers@cinnamon.org/applet.js)
  * ===================================================================*/
+.panel-launchers {
+  spacing: 2px; }
+
+.panel-launchers .launcher {
+  padding-left: 1px;
+  padding-right: 1px;
+  border: 0 solid transparent;
+  border-bottom-width: 1px; }
+
+.panel-launchers .launcher:hover {
+  background-gradient-direction: vertical;
+  background-gradient-start: rgba(226, 235, 222, 0.2);
+  background-gradient-end: rgba(92, 161, 76, 0.5);
+  border-color: rgba(36, 142, 39, 0.7); }
+
 .panel-launcher:hover {
   background-color: rgba(0, 0, 0, 0.5); }
 
@@ -1195,79 +1205,88 @@ height of the table to be ICON_SIZE + IMAGE_SIZE + spacing-rows = 24 + 125 + 10 
 * Menu (menu.js)
 * ===================================================================*/
 /* Main menu title */
-.menu-favorites-box {
-  margin: auto;
-  background-color: #D3E5FA;
-  border: 1px solid #95bdee;
-  border-radius: 0px;
-  padding: 0.5em;
-  color: black; }
-
 .menu-background {
-  border: solid 1px transparent;
-  border-image: url("assets/menu-bg.png") 12 12 67 42;
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
-  padding: 55px 1px 0px 1px; }
+  margin: 0px; }
+  .menu-background .popup-menu-content {
+    padding: 0px;
+    margin: 0px;
+    border-style: solid;
+    border-color: transparent;
+    border-image: url("assets/menu-border.png") 12 12 67 42;
+    border-top-width: 67px;
+    border-right-width: 2px;
+    border-bottom-width: 42px;
+    border-left-width: 2px; }
+
+.menu-favorites-box {
+  margin: 0;
+  background-color: #e2e7eb;
+  border: 1px solid #6b6e73;
+  border-radius: 0px;
+  padding: 0; }
 
 .menu-favorites-button {
-  padding: 10px;
+  padding: 6px;
   border-radius: 0px; }
-
-.menu-favorites-button:hover {
-  background-color: #316ac5;
-  color: white; }
+  .menu-favorites-button:hover {
+    background-color: #bbb7c7; }
 
 .menu-places-box {
   margin: auto;
-  padding: 8px;
-  border: 0px solid #666; }
+  padding: 1px;
+  border: 1px solid #666; }
 
 .menu-places-button {
-  padding: 10px; }
+  padding: 1px; }
 
 .menu-categories-box {
-  padding: 10px; }
+  padding: 0px;
+  border-right: 1px solid #b4bdc7; }
 
 .menu-applications-box {
-  padding: 10px 0px 0px 10px;
-  background-color: white;
-  border: none; }
+  padding: 0px;
+  background-color: white; }
+  .menu-applications-box StScrollBar {
+    padding: 0px; }
+  .menu-applications-box StScrollView {
+    border: 0px solid #305496;
+    border-image: none;
+    border-right-width: 0px; }
+  .menu-applications-box StBin#trough {
+    background: none;
+    border-width: 0px;
+    box-shadow: none;
+    border-image: url("assets/trough-scrollbar-vert.png") 1; }
+  .menu-applications-box StButton#vhandle {
+    border-image: url("assets/slider-vert.png") 3;
+    background: url("assets/handle-vert.png") no-repeat center center; }
+  .menu-applications-box StButton#vhandle:hover {
+    border-image: url("assets/slider-vert-hover.png") 3;
+    background: url("assets/handle-vert.png") no-repeat center center; }
 
 .menu-applications-inner-box {
-  padding: 5px;
-  background-color: #d3e5fa; }
-
-.menu-applications-box StScrollBar {
-  padding: 0px; }
-
-.menu-applications-box StScrollView {
-  border: 0px solid #305496;
-  border-image: none;
-  border-right-width: 0px; }
-
-.menu-applications-box StBin#trough {
-  background: none;
-  border-width: 0px;
-  box-shadow: none;
-  border-image: url("assets/trough-scrollbar-vert.png") 1; }
-
-.menu-applications-box StButton#vhandle {
-  border-image: url("assets/slider-vert.png") 3;
-  background: url("assets/handle-vert.png") no-repeat center center; }
-
-.menu-applications-box StButton#vhandle:hover {
-  border-image: url("assets/slider-vert-hover.png") 3;
-  background: url("assets/handle-vert.png") no-repeat center center; }
+  padding: 0px;
+  border-top: 0px solid #b4bdc7;
+  border-right: 0px solid #b4bdc7;
+  border-left: 1px solid #b4bdc7;
+  background-color: white; }
+  .menu-applications-inner-box .popup-menu-item {
+    color: black; }
+    .menu-applications-inner-box .popup-menu-item:hover {
+      background-gradient-direction: none;
+      color: black;
+      background-color: #bbb7c7; }
 
 .menu-application-button {
-  padding: 7px;
-  max-width: 10px;
+  padding: 3px;
+  margin: 1px 6px 1px 6px;
   color: black; }
 
 .menu-application-button-selected {
-  padding: 7px;
-  color: white;
-  background-color: #335ea8; }
+  padding: 3px;
+  margin: 1px 6px 1px 6px;
+  color: black;
+  background-color: #bbb7c7; }
 
 .menu-application-button-label:ltr {
   padding-left: 5px; }
@@ -1276,17 +1295,20 @@ height of the table to be ICON_SIZE + IMAGE_SIZE + spacing-rows = 24 + 125 + 10 
   padding-right: 5px; }
 
 .menu-category-button {
-  padding: 7px;
+  padding: 6px;
+  margin: 1px 6px 1px 6px;
   color: black; }
 
 .menu-category-button-greyed {
-  padding: 7px;
+  padding: 6px;
+  margin: 1px 6px 1px 6px;
   color: #808080; }
 
 .menu-category-button-selected {
-  padding: 7px;
-  color: white;
-  background-color: #335ea8; }
+  padding: 6px;
+  margin: 1px 6px 1px 6px;
+  color: black;
+  background-color: #bbb7c7; }
 
 .menu-category-button-label:ltr {
   padding-left: 5px; }
@@ -1301,7 +1323,9 @@ height of the table to be ICON_SIZE + IMAGE_SIZE + spacing-rows = 24 + 125 + 10 
   padding-right: 30px;
   padding-left: 28px;
   text-align: right;
-  color: black; }
+  color: #0a246a;
+  background-color: #e2e7eb;
+  border-top: 1px solid #6b6e73; }
 
 .menu-selected-app-title {
   font-weight: bold; }
@@ -1309,26 +1333,22 @@ height of the table to be ICON_SIZE + IMAGE_SIZE + spacing-rows = 24 + 125 + 10 
 .menu-selected-app-description {
   max-width: 150px; }
 
-#menu-search-entry, #menu-search-entry:hover, #menu-search-entry:focus {
-  padding: 5px 6px;
-  color: #000;
-  font: 9pt;
-  height: 18px;
-  width: 250px;
-  selected-color: white;
-  caret-color: #000;
-  background-color: white;
-  caret-size: 1px;
-  margin-bottom: 10px;
+.menu-search-box {
+  padding: 0px;
+  margin: 0px; }
+
+#menu-search-entry,
+#menu-search-entry:hover,
+#menu-search-entry:focus {
+  padding: 6px;
+  color: black;
+  background-color: #ffffff;
+  selected-color: #ffffff;
+  selection-background-color: #316ac5;
   border: 1px solid gray; }
 
-.menu-search-box {
-  padding-left: 20px;
-  padding-bottom: 10px; }
-
 .menu-search-entry-icon {
-  icon-size: 1em;
-  color: #000; }
+  icon-size: 1em; }
 
 /* Context menu (at the moment only for favorites) */
   /* ===================================================================
@@ -1389,10 +1409,10 @@ height of the table to be ICON_SIZE + IMAGE_SIZE + spacing-rows = 24 + 125 + 10 
 
 /* https://github.com/B00merang-Project/Windows-XP/issues/44 */
 .grouped-window-list-thumbnail-menu {
-  spacing: 6px;
+  /*spacing: 6px;
   padding: 6px 12px 12px 12px;
   border-image: url("assets/menu-bottom.png") 6;
-  color: #ffffff; }
+  color: #ffffff;*/ }
 
 /* experimental support for grouped window list */
 .grouped-window-list-item-box {
@@ -1447,13 +1467,13 @@ height of the table to be ICON_SIZE + IMAGE_SIZE + spacing-rows = 24 + 125 + 10 
     transition-duration: 100;
     color: white; }
     *.panel-top .grouped-window-list-item-box:focus:hover {
-      border-image: url("assets/item-box-top-hover.png"); }
+      border-image: url("assets/item-box-top-active-hover.png"); }
     *.panel-bottom .grouped-window-list-item-box:focus:hover {
-      border-image: url("assets/item-box-bottom-hover.png"); }
+      border-image: url("assets/item-box-bottom-active-hover.png"); }
     *.panel-left .grouped-window-list-item-box:focus:hover {
-      border-image: url("assets/item-box-left-hover.png"); }
+      border-image: url("assets/item-box-left-active-hover.png"); }
     *.panel-right .grouped-window-list-item-box:focus:hover {
-      border-image: url("assets/item-box-right-hover.png"); }
+      border-image: url("assets/item-box-right-active-hover.png"); }
 
 .grouped-window-list-item-demands-attention {
   font-weight: normal;
@@ -1490,10 +1510,10 @@ height of the table to be ICON_SIZE + IMAGE_SIZE + spacing-rows = 24 + 125 + 10 
   font-size: 1em; }
 
 .grouped-window-list-thumbnail-menu {
-  spacing: 6px;
-  padding: 6px 12px 12px 12px;
+  /*spacing: 6px;
+    padding: 6px 12px 12px 12px;
   border-image: url("assets/menu-bottom.png") 6;
-  color: #ffffff; }
+  color: #ffffff;*/ }
 
 .grouped-window-list-thumbnail-menu > StBoxLayout {
   padding: 4px; }
@@ -1512,71 +1532,58 @@ height of the table to be ICON_SIZE + IMAGE_SIZE + spacing-rows = 24 + 125 + 10 
   background-color: #1466c9;
   border: none; }
 
-    /* ===================================================================
-* Sound Applet (status/volume.js)
+/* ===================================================================
+* Sound applet (sound@cinnamon.org/applet.js)
 * ===================================================================*/
-.sound-button-container {
-  padding-right: 2px;
-  padding-left: 2px;
-  background-color: #232527;
-  border: 2px solid #656565;
-  border-top: 0px;
-  border-left: 0px;
-  border-right: 0px;
-  box-shadow: 0px -1px 0px 0px #333333; }
-
-.sound-button {
-  width: 26px;
-  height: 20px;
+.sound-player StButton {
+  width: 22px;
+  height: 22px;
   padding: 5px;
-  color: #fff;
-  background-color: #000; }
+  color: white; }
+  .sound-player StButton:small {
+    border: 1px solid transparent;
+    border-radius: 3px;
+    width: 16px;
+    height: 16px;
+    color: #c8c8c8; }
+    .sound-player StButton:small:hover {
+      color: white;
+      border-image: url("button-assets/button-hover.png") 4; }
+    .sound-player StButton:small:active {
+      color: white;
+      border-image: url("button-assets/button-pressed.png") 4; }
+  .sound-player StButton:hover, .sound-player StButton:active {
+    color: #fff; }
+.sound-player .slider {
+  height: 0.5em;
+  -slider-height: 0.5em;
+  -slider-background-color: #7a7a7a;
+  -slider-border-color: rgba(0, 0, 0, 0);
+  -slider-active-background-color: #ffffff;
+  -slider-active-border-color: rgba(0, 0, 0, 0);
+  -slider-border-width: 0px;
+  -slider-handle-radius: 0px; }
+.sound-player StBoxLayout {
+  spacing: 0.5em;
+  color: white;
+  font-weight: bold; }
+.sound-player > StBoxLayout {
+  padding: 0 16px 8px; }
 
-.sound-button:hover {
-  background-color: #232527;
-  color: #399cee;
-  transition-duration: 200; }
+.sound-player-overlay {
+  width: 300px;
+  padding: 15px;
+  spacing: 0.5em;
+  background-gradient-direction: vertical;
+  background-gradient-start: #397dd0;
+  background-gradient-end: #2c55b1;
+  color: #FFF; }
 
-.sound-button:active {
-  background-color: rgba(57, 156, 238, 0.1);
-  color: #399cee;
-  transition-duration: 200; }
+.sound-player-overlay StBoxLayout {
+  padding-top: 2px; }
 
-.sound-button StIcon {
-  icon-size: 1em; }
-
-.sound-track-infos {
-  padding-left: 5px;
-  padding-right: 5px;
-  padding-top: 5px;
-  padding-bottom: 5px; }
-
-.sound-track-info {
-  padding-top: 2px;
-  padding-bottom: 2px; }
-
-.sound-track-info StIcon {
-  icon-size: 1em; }
-
-.sound-track-info StLabel {
-  padding-left: 5px;
-  padding-right: 5px; }
-
-.sound-track-box {
-  padding-left: 18px;
-  padding-right: 18px;
-  max-width: 220px; }
-
-.sound-volume-menu-item {
-  padding: .4em 1.75em; }
-
-.sound-volume-menu-item StIcon {
-  icon-size: 1.14em;
-  padding-left: 8px; }
-
-.sound-playback-control {
-  padding-top: 5px;
-  padding-bottom: 10px; }
+.sound-player-generic-coverart {
+  background: rgba(0, 0, 0, 0.2); }
 
 /* ===================================================================
 * Workspace Switcher applet (workspaceSwitcher.js)
@@ -1628,6 +1635,12 @@ height of the table to be ICON_SIZE + IMAGE_SIZE + spacing-rows = 24 + 125 + 10 
 
 .applet-box {
   transition-duration: 300; }
+  *.panel-bottom .applet-box, *.panel-top .applet-box {
+    padding-left: 1px;
+    padding-right: 1px; }
+  *.panel-left .applet-box, *.panel-right .applet-box {
+    padding-top: 1px;
+    padding-bottom: 1px; }
 
 .applet-box:hover {
   background-color: rgba(25, 25, 25, 0.2);
